--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "project6",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-strap": "^0.0.1",
+    "reactstrap": "^8.9.0",
+    "sweetalert2": "^10.15.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
